--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/node": "^22.9.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
-    "vite-plugin-node": "^4.0.0"
+    "vite-plugin-node": "^4.0.0",
+    "vitest": "^2.1.5"
   },
   "dependencies": {
     "fastify": "^5.1.0"
